,/platform/kyverno/policies/require-probes.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-probes

spec:
  validationFailureAction: enforce

  rules:
    - name: probes-required

      match:
        any:
          - resources:
              kinds:
                - Pod
                #- Deployment
                #- StatefulSet
                #- DaemonSet
                #- Job
                #- CronJob

      exclude:
        any:
          - resources:
              namespaces:
                - kyverno
                - kube-system
                - argocd
                - falco
                - monitoring                

      validate:
        message: "Liveness and readiness probes are required"

        pattern:
          spec:          
            containers:
              - livenessProbe:
                  httpGet:
                    path: "?*"

                readinessProbe:
                  httpGet:
                    path: "?*"
