,/platform/kyverno/policies/restrict-capabilities.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: restrict-capabilities

spec:
  validationFailureAction: Enforce

  rules:
    - name: drop-capabilities

      match:
        any:
          - resources:
              kinds:
                - Pod

      exclude:
        any:
          - resources:
              namespaces:
                - kyverno
                - kube-system
                - argocd
                - falco
                - monitoring

      validate:
        message: "All capabilities must be dropped"

        pattern:
          spec:
            containers:
              - securityContext:
                  capabilities:
                    drop:
                      - ALL
